fixed saving image not centered

--- a/lab/style.css
+++ b/lab/style.css
@@ -73,15 +73,14 @@ tbody:not(.empty) td:hover {
 
 .graphic-container {
   height: 250px;
-  display: flex;
-  justify-content: space-around;
 }
 
 #qrcode-square {
   position: relative;
-  flex: 0 0 250px;
+  float: left;
+  width: 250px;
   height: 100%;
-  border: 10px solid #ffffff;
+  border: 3px solid #ffffff;
 }
 
 #qrcode-square > canvas, #qrcode-square > img {
@@ -90,7 +89,8 @@ tbody:not(.empty) td:hover {
 }
 
 .momcode-square {
-  flex: 0 0 250px;
+  float: left;
+  width: 250px;
   height: 100%;
   font-size: 36px;
   background-color: rgba(255, 255, 255, 0.7);
@@ -131,6 +131,9 @@ tbody:not(.empty) td:hover {
   height: 33%;
 }
 .injection-controls {
+  float: left;
+  width: calc(100% - 250px*2 - 50px*2);
+  margin: 0 50px;
   font-size: 0.8em;
 }
 .injection-controls > label {
